# metadata-shortener-wasm

./: Cargo.toml  README.md  build.sh  dev_example.sh  dev_watch.sh  publish.sh
example/: package.json  pnpm-lock.yaml  vite.config.ts
example/src/: App.tsx
example/src/utils/: constants.ts  getHexPayload.ts  getMetadataHashFromApi.ts  getMetadataHashFromWasm.ts  getShortMetadataFromApi.ts  getShortMetadataFromWasm.ts
src/: helper.rs  lib.rs
