[package]
name = "metadata-shortener-wasm"
version = "0.1.0"
authors = ["Kheops <26880866+0xKheops@users.noreply.github.com>"]
description = "A WASM wrapper around the metadata-shortener crate"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
frame-metadata = { version = "16.0.0", default-features = false, features = [
    "current",
    "decode",
] }
hex = "0.4.3"
# merkleized-metadata = { git = "https://github.com/bkchr/merkleized-metadata.git", default-features = false }
merkleized-metadata = { git = "https://github.com/Zondax/merkleized-metadata", default-features = false, rev = "cd1363a2c4702abf34fcc461055f0059b3c32bec" }
parity-scale-codec = { version = "3.6.9", default-features = false }
# parity-scale-codec = { version = "3.6.9", default-features = false, features = [
#     "derive",
#     "bit-vec",
# ] }
scale-info = { version = "2.11.1", default-features = false }
array-bytes = { version = "6.2.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
scale-decode = { version = "0.12.0", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
